# Swift-Neural-Networks

./: .gitattributes  .gitignore  Cargo.toml  Learning_Guide.md  MIGRATION.md  Package.swift  README.md  README.txt  Testing.md  VERIFICATION_RESULTS.md  VERIFICATION_RESULTS_ATTENTION.md  analyze_performance.py  baseline_measured.txt  micro_benchmark_progress.swift  mlp_simple  mlp_simple.rs  mlp_simple.swift  mlp_simple_swift  mnist_attention_pool.rs  mnist_attention_pool.swift  mnist_attention_pool_swift  mnist_cnn  mnist_cnn.rs  mnist_cnn.swift  mnist_cnn_swift  mnist_mlp  mnist_mlp.rs  mnist_mlp.swift  mnist_mlp_swift  performance_analysis_detailed.swift  performance_benchmark.sh  plot_comparison.py  report.json  run.txt  test_layouts.swift  verify_attention_saveload.swift  verify_cli_consistency.sh  verify_cli_flags.sh  verify_cnn_saveload.swift  verify_progress_bar_edge_cases.sh
Tests/: ProgressBarTests.swift
benchmarks/: classic_cpu_h256_20260210_161706.json  classic_cpu_h512_20260210_161706.json  classic_mps_h256_20260210_161706.json  classic_mps_h512_20260210_161706.json  classic_mpsgraph_h256_20260210_161706.json  classic_mpsgraph_h512_20260210_161706.json
docs/: 1 Home.md  10 Development-Guide.md  2 Quick-Start-Guide.md  3 Architecture-Overview.md  4 Training-Systems.md  4a MNIST-MLP-Implementation.md  4b MNIST-CNN-Implementation.md  4c Attention-Model-Implementation.md  4d Simple-MLP-(XOR-Example).md  5 GPU-Acceleration.md  5a Backend-Selection.md  5b Accelerate-Framework-(CPU).md  5c MPS-Hybrid-Mode.md  5d MPSGraph-Full-GPU-Mode.md  6 Python-Utilities.md  (+13 more)
(+56 files in other folders)
